update rhyme data

--- a/src/poepy/data/references.bib
+++ b/src/poepy/data/references.bib
@@ -1,3 +1,17 @@
+@Article{Weingarten2016,
+  author  = {Weingarten, Oliver},
+  title   = {The Singing Sage: rhymes in Confucius dialogues},
+  journal = {Bulletin of SOAS},
+  year    = {2016},
+  number  = {3},
+  volume  = {79},
+}
+
+@Book{Eichendorff1815,
+	author = {Eichendorff, Joseph von},
+	title = {Ahnung und Gegenwart},
+	year = {1815}
+}
 
 @Book{Wang1980,
   Title                    = {{S}hījīng {Y}ùndú},
@@ -13,3 +27,13 @@
   Userb                    = {詩經韻讀}
 }
 
+@Book{Baxter1992,
+  Title                    = {{A} handbook of {O}ld {C}hinese phonology},
+  Address                  = {Berlin},
+  Author                   = {Baxter, William H.},
+  Publisher                = {de Gruyter},
+  Year                     = {1992},
+
+  Owner                    = {mattis},
+  Timestamp                = {2009.11.23}
+}
